--- a/csharp/examples/examples.csproj
+++ b/csharp/examples/examples.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.11.0" />
+    <PackageReference Include="TensorFlow.Keras" Version="0.10.3" />
+    <PackageReference Include="TensorFlow.NET" Version="0.100.3" />
+  </ItemGroup>
+
 </Project>
