--- a/js/decision-forest-demo/package.json
+++ b/js/decision-forest-demo/package.json
@@ -3,6 +3,6 @@
     "dev": "npm run start",
     "start": "bun index.tsx",
     "surge": "npm run deploy",
-    "deploy": "surge . http://decision-forest-demo.surge.sh/"
+    "deploy": "surge . https://decision-forest-demo.surge.sh/"
   }
 }
